# ionic-stm32

./: .gitignore  Build.hs  ChangeLog.md  Makefile  README.md  blink-ion.cabal  booted.sh  build.sh  gcc-shell.nix  ionic-shell.nix  make  report.html  run-dev  run-in-shell.sh  shell-shake.nix  shell.nix  stlink-shell.nix  styx-shell.nix  styx.yaml
_build/: .shake.database  run
_shake/: Main.hi  build
csource/: Makefile.common  Makefile.src  startup_stm32f10x_md.c
csource/Libraries/STM32_USB-FS-Device_Driver/inc/: usb_type.h
csource/Libraries/STM32_USB-FS-Device_Driver/src/: usb_core.c
csource/usb/: hw_config.c  hw_config.h  keycodes.c  keycodes.h  platform_config.h  stm32_it.c  stm32_it.h  usb_conf.h  usb_desc.c  usb_desc.h  usb_endp.c  usb_istr.c  usb_istr.h  usb_main.c  usb_main.h  usb_prop.c  usb_pwr.c  usb_pwr.h
ionic/: LICENSE  ionic.cabal
ionic/src/: Ionic.hs  IvoryMain.hs  Main.hs  Pilot.hs  Schedule.hs
ionic/src/Ivored/: CModule.hs  FIFO.hs  Helpers.hs  Keycodes.hs  Main.hs  MainIvored.hs
ionic/src/Ivored/Inc/: Core_CM3.hs  STM32F10x.hs  System_STM32F10x.hs
ionic/src/Ivored/Inc/STM32F10x/: GPIO.hs  RCC.hs  USB.hs
nix/: nixpkgs.json  nixpkgs.nix  release.nix  stlink.nix  update-nixpkgs.sh
src/: BlinkIon.hs  Main.hs
