cabal-version:       2.2
name:                ionic
version:             0.1.0.0
synopsis:            Learning to program with ion
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sergey Ivanov
maintainer:          ivanovs-4@yandex.ru
-- copyright:
category:            Concurrency
build-type:          Simple
extra-source-files:  ChangeLog.md

executable ionic
  main-is:             Main.hs
  other-modules:
        Ionic
  -- other-extensions:
  build-depends:       base >=4.11
    , ion
    , ivory
    , ivory-backend-c
    , optparse-applicative
    , pretty-simple
    , text
  hs-source-dirs:      src
  default-language:    Haskell2010
