cabal-version:       2.2
name:                ionic
version:             0.1.0.0
synopsis:            Learning to program with ion
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sergey Ivanov
maintainer:          ivanovs-4@yandex.ru
-- copyright:
category:            Concurrency
build-type:          Simple
extra-source-files:  ChangeLog.md

executable ionic
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:
        Ionic
      , Ivored.Helpers
      , Ivored.Inc.Core_CM3
      , Ivored.Inc.STM32F10x
      , Ivored.Inc.STM32F10x.GPIO
      , Ivored.Inc.STM32F10x.RCC
      , Ivored.Inc.System_STM32F10x
      , Ivored.MainIvored
      , IvoryMain
      , Pilot
  build-depends:       base >=4.11
    , copilot
    , copilot-c99
    , directory
    , ion
    , ivory
    , ivory-backend-c
    , ivory-opts
    , ivory-stdlib
    , optparse-applicative
    , pretty-simple
    , text
  -- other-extensions:
  default-extensions:
    DataKinds
    FlexibleInstances
    LambdaCase
    OverloadedStrings
    QuasiQuotes
    RecursiveDo
    TypeApplications
    TypeOperators
